Remove http links

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<a id="logo" href="http://ducttapenetwork.org/">
+<a id="logo" href="https://www.ducttapenetwork.org/">
 	<img src="dtn_files/logo1.png" alt="">
 	</a>
 	<br>
@@ -104,7 +104,7 @@
 <div class="column">
 <h1>The DTN Guidebook</h1>
 <p>Your role is to run DTN Maker Clubs in your community! We created a "maker-club-in-a-box" and a 7-week curriculum that you can use as a starting point.  We encourage you to adapt our materials to fit the needs and interest of your community.</p>
-<p><a href="http://goo.gl/forms/jas5ESBEiC">Contact us</a> to get a copy of your DTN Guidebook.</p>
+<p><a href="https://goo.gl/forms/jas5ESBEiC">Contact us</a> to get a copy of your DTN Guidebook.</p>
 </div>
 
 <div class="column">
@@ -127,10 +127,10 @@
  
 <div class="partners-section">
     <div class="column">
-        <a href="http://www.media.mit.edu/"><img class="partners-image" src="dtn_files/media_lab_logo.png" alt=""></a>
+        <a href="https://www.media.mit.edu/"><img class="partners-image" src="dtn_files/media_lab_logo.png" alt=""></a>
     </div>
     <div class="column">
-        <a href="http://www.autodesk.com/"><img class="partners-image" src="dtn_files/autodesk_logo.png" alt=""></a> 
+        <a href="https://www.autodesk.com/"><img class="partners-image" src="dtn_files/autodesk_logo.png" alt=""></a>
     </div>
 </div>         
 <hr class="clear"></div>
